feat(security): comprehensive multi-tenant isolation, defense-in-depth authorization, and HIPAA hardening
- Multi-tenant defense-in-depth: enforce application-layer tenant validation across all services (appointments, prescriptions, billing, beds, encounters, vitals, uploads, sync)
- RLS policy hardening: PostgreSQL Row-Level Security isolation with hybrid GLOBAL formulary read policy and restricted write policy
- Timing attack mitigation: dummy BCrypt hash on locked/invalid account login paths for constant-time authentication
- Cache isolation: dual-layer tenant-prefixed cache keys with TenantAwareKeyGenerator
- Field-level encryption: AES-256-GCM encryption-at-rest for patient uploads and clinical notes via CryptoConverter
- HIPAA compliance: full audit logging for clinical document viewing, uploads, and deletions with REQUIRES_NEW propagation
- Payload size validation: 5MB Base64 ceiling and format checks on patient uploads to prevent DoS
- Zero-emoji compliance: replaced legacy emojis with vector inline SVGs